feat: Add endpoint to finish listing agenda and corresponding request/response models
